# Scam-Message-Analyzer

./: .gitignore  README.md  app.py  pyproject.toml  requirements.txt  vercel.json
.github/workflows/: ci.yml
scam_explainer/: __main__.py  analyzer.py  checks.py  cli.py  explanations.py  findings.py  scoring.py  web.py
scam_message_analyzer/: __init__.py  __main__.py  analyzer.py  checks.py  cli.py  explanations.py  ocr.py  scoring.py  web.py
tests/: test_analyzer.py  test_detectors.py  test_ocr.py  test_web.py
web/: index.html  package.json  styles.css
web/src/: analyzer.js  checks.js  explanations.js  findings.js  main.js  ocr.js  scoring.js
web/tests/: run.js
